<resources>
    <string name="app_name">Assignment 2</string>
    <string name="current_location">Current Location: %s</string>
    <string name="back_button_text">Back</string>
    <string name="create_game_text">Create Game</string>
    <string name="sport_label_text">Sport:</string>
    <string name="location_label_text">Location:</string>
    <string name="autoLocate_label_text">Auto Locate</string>
    <string name="date_label_text">Date:</string>
    <string name="time_label_text">Time:</string>
    <string name="skill_label_text">Game Skill:</string>
    <string name="createGame_button_text">Create Game</string>
    <string name="search_button_text">Search</string>
    <string name="selected_location">Selected Location:\n%s\n%s</string>
    <string name="start_label">Start: </string>
    <string name="end_label">End: </string>
    <string name="join_game_button_text">Join Game</string>
    <string name="game_details_text">Game Details</string>
    <string-array name="time_options">
        <item>00:00</item>
        <item>00:30</item>
        <item>01:00</item>
        <item>01:30</item>
        <item>02:00</item>
        <item>02:30</item>
        <item>03:00</item>
        <item>03:30</item>
        <item>04:00</item>
        <item>04:30</item>
        <item>05:00</item>
        <item>05:30</item>
        <item>06:00</item>
        <item>06:30</item>
        <item>07:00</item>
        <item>07:30</item>
        <item>08:00</item>
        <item>08:30</item>
        <item>09:00</item>
        <item>09:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>
        <item>12:30</item>
        <item>13:00</item>
        <item>13:30</item>
        <item>14:00</item>
        <item>14:30</item>
        <item>15:00</item>
        <item>15:30</item>
        <item>16:00</item>
        <item>16:30</item>
        <item>17:00</item>
        <item>17:30</item>
        <item>18:00</item>
        <item>18:30</item>
        <item>19:00</item>
        <item>19:30</item>
        <item>20:00</item>
        <item>20:30</item>
        <item>21:00</item>
        <item>21:30</item>
        <item>22:00</item>
        <item>22:30</item>
        <item>23:00</item>
        <item>23:30</item>
    </string-array>
</resources>