<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/navigationBar"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <RelativeLayout
                android:id="@+id/top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <ImageButton
                    android:id="@+id/backButton"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="7dp"
                    android:adjustViewBounds="true"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:src="@drawable/back_button" />

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="243dp"
                    android:layout_height="40dp"
                    android:layout_alignTop="@id/backButton"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="-7dp"
                    android:layout_marginEnd="118dp"
                    android:layout_toEndOf="@+id/backButton"
                    android:text="@string/create_game_text"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </RelativeLayout>



            <RelativeLayout
                android:id="@+id/sportSection"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_below="@id/top"
                android:layout_marginTop="10dp"
                android:background="@color/card_background">

                <TextView
                    android:id="@+id/currentLocationTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Current Location: "
                    android:textStyle="bold"
                    android:visibility="gone" />


                <TextView
                    android:id="@+id/sportLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/sport_label_text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/sportSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sportLabel"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:minHeight="48dp" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/locationSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sportSection"
                android:layout_marginTop="16dp"
                android:background="@color/card_background">

                <TextView
                    android:id="@+id/locationLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/location_label_text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:id="@+id/locationLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/locationLabel"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp">

                    <EditText
                        android:id="@+id/locationEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_toStartOf="@id/searchButton"
                        android:inputType="text"
                        android:textSize="16sp" />

                    <ImageButton
                        android:id="@+id/searchButton"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="8dp"
                        android:background="@null"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/search" />

                    <TextView
                        android:id="@+id/selectedLocationTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/locationEditText"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="8dp"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:visibility="gone" />
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/dateSection"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:layout_below="@id/locationSection"
                android:layout_marginTop="16dp"
                android:background="@color/card_background">

                <TextView
                    android:id="@+id/dateLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/date_label_text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/selectedDateTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="16dp"
                    android:layout_toEndOf="@id/dateLabel"
                    android:textSize="17sp"
                    android:visibility="gone" />

                <ImageButton
                    android:id="@+id/calendarIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_below="@id/dateLabel"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:background="@null"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/calendar_icon" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/timeSection"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_below="@id/dateSection"
                android:layout_marginTop="16dp"
                android:background="@color/card_background">

                <TextView
                    android:id="@+id/timeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/time_label_text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/startHourLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/timeLabel"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/start_label"
                    android:textSize="15dp" />

                <!-- Start Hour Spinner and AM/PM Spinner -->
                <Spinner
                    android:id="@+id/startHourSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/timeLabel"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@id/startHourLabel"
                    android:entries="@array/hours_array" />

                <Spinner
                    android:id="@+id/startAmPmSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/timeLabel"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@id/startHourSpinner"
                    android:entries="@array/am_pm_array" />

                <TextView
                    android:id="@+id/endHourLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/startHourLabel"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/end_label"
                    android:textSize="15dp" />

                <Spinner
                    android:id="@+id/endHourSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/startHourLabel"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@id/endHourLabel"
                    android:entries="@array/hours_array" />

                <Spinner
                    android:id="@+id/endAmPmSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/startHourLabel"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@id/endHourSpinner"
                    android:entries="@array/am_pm_array" />

            </RelativeLayout>

            <!-- Here you can include a TimePicker widget for users to choose the time -->

            <RelativeLayout
                android:id="@+id/skillSection"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_below="@id/timeSection"
                android:layout_marginTop="16dp"
                android:background="@color/card_background">

                <TextView
                    android:id="@+id/skillLevelLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/skill_label_text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/skillLevelSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/skillLevelLabel"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="8dp" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/maxPlayersSection"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_below="@id/skillSection"
                android:layout_marginTop="16dp"
                android:background="@color/card_background">

                <TextView
                    android:id="@+id/maxPlayersLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="Max Players:"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/maxPlayersEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_below="@id/maxPlayersLabel"
                    android:hint="Number of Max Players"
                    android:inputType="number"
                    android:textSize="16sp" />
            </RelativeLayout>


            <Button
                android:id="@+id/createGameButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/maxPlayersSection"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="24dp"
                android:text="@string/createGame_button_text" />

        </RelativeLayout>
    </ScrollView>

    <!-- Navigation bar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="@drawable/border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <include layout="@layout/bottom_navigation_bar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>